--- a/index.html
+++ b/index.html
@@ -1,1 +1,179 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Psychophysics Experiments</title>
+  <style>
+    :root {
+      color-scheme: light dark;
+      --bg: #f5f5f5;
+      --fg: #1d1d1f;
+      --accent: #3b82f6;
+      --card-bg: rgba(255, 255, 255, 0.85);
+      --shadow: 0 8px 24px rgba(0, 0, 0, 0.12);
+      font-family: "Inter", "Helvetica Neue", Arial, sans-serif;
+    }
 
+    body {
+      margin: 0;
+      min-height: 100vh;
+      background: radial-gradient(circle at top, #e0f2ff 0%, #f8f8ff 40%, #f5f5f5 100%);
+      color: var(--fg);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 32px 16px;
+    }
+
+    .container {
+      max-width: 960px;
+      width: 100%;
+      background: var(--card-bg);
+      backdrop-filter: blur(10px);
+      border-radius: 24px;
+      box-shadow: var(--shadow);
+      padding: clamp(24px, 4vw, 48px);
+    }
+
+    header {
+      text-align: center;
+      margin-bottom: clamp(24px, 6vw, 48px);
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: clamp(1.8rem, 4vw, 3rem);
+    }
+
+    header p {
+      font-size: clamp(1rem, 2.5vw, 1.2rem);
+      line-height: 1.6;
+      max-width: 680px;
+      margin: 16px auto 0;
+    }
+
+    .experiment-list {
+      display: grid;
+      gap: clamp(16px, 3vw, 32px);
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+      padding: 0;
+      margin: 0;
+      list-style: none;
+    }
+
+    .experiment-card {
+      background: rgba(255, 255, 255, 0.9);
+      border-radius: 18px;
+      padding: clamp(20px, 4vw, 28px);
+      box-shadow: 0 6px 18px rgba(15, 23, 42, 0.15);
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      transition: transform 200ms ease, box-shadow 200ms ease;
+    }
+
+    .experiment-card:hover,
+    .experiment-card:focus-within {
+      transform: translateY(-6px);
+      box-shadow: 0 14px 28px rgba(15, 23, 42, 0.18);
+    }
+
+    .experiment-card h2 {
+      margin-top: 0;
+      margin-bottom: 12px;
+      font-size: clamp(1.1rem, 2.4vw, 1.4rem);
+    }
+
+    .experiment-card p {
+      margin-top: 0;
+      margin-bottom: 18px;
+      line-height: 1.6;
+    }
+
+    .experiment-card a {
+      align-self: flex-start;
+      text-decoration: none;
+      font-weight: 600;
+      background: var(--accent);
+      color: white;
+      padding: 10px 18px;
+      border-radius: 999px;
+      box-shadow: inset 0 -2px 0 rgba(0, 0, 0, 0.16);
+      transition: background 200ms ease;
+    }
+
+    .experiment-card a:focus,
+    .experiment-card a:hover {
+      background: #1d4ed8;
+    }
+
+    footer {
+      margin-top: clamp(24px, 6vw, 48px);
+      text-align: center;
+      font-size: 0.95rem;
+      color: rgba(15, 23, 42, 0.68);
+    }
+
+    @media (prefers-color-scheme: dark) {
+      :root {
+        --bg: #0f172a;
+        --fg: #f8fafc;
+        --accent: #60a5fa;
+        --card-bg: rgba(15, 23, 42, 0.85);
+        --shadow: 0 8px 24px rgba(15, 23, 42, 0.6);
+      }
+
+      body {
+        background: radial-gradient(circle at top, #1e293b 0%, #0f172a 100%);
+      }
+
+      .experiment-card {
+        background: rgba(30, 41, 59, 0.85);
+        color: var(--fg);
+      }
+
+      .experiment-card p {
+        color: rgba(226, 232, 240, 0.85);
+      }
+
+      .experiment-card a {
+        color: #0f172a;
+      }
+
+      footer {
+        color: rgba(226, 232, 240, 0.7);
+      }
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <header>
+      <h1>Psychophysics Lab</h1>
+      <p>
+        Explore browser-based cognitive psychology experiments crafted with
+        <a href="https://www.jspsych.org/latest/" target="_blank" rel="noopener noreferrer">jsPsych</a>.
+        Each experiment is optimised for desktop and mobile so you can participate wherever you are.
+      </p>
+    </header>
+
+    <ul class="experiment-list">
+      <li class="experiment-card">
+        <div>
+          <h2>Attentional Blink (Digits)</h2>
+          <p>
+            Observe a rapid stream of letters and digits, then report the two target numbers.
+            This classic task explores how attention momentarily "blinks" after detecting an important item.
+          </p>
+        </div>
+        <a href="experiments/attentional-blink.html">Start experiment</a>
+      </li>
+    </ul>
+
+    <footer>
+      More experiments are coming soon. Stay tuned!
+    </footer>
+  </div>
+</body>
+</html>
