Add JND go-no-go experiment with jsQuestPlus adaptation

--- a/index.html
+++ b/index.html
@@ -161,6 +161,16 @@
     <ul class="experiment-list">
       <li class="experiment-card">
         <div>
+          <h2>JND Go/No-Go (Dot Reappearance)</h2>
+          <p>
+            Judge whether a briefly flashed dot changes when it reappears. The task adapts the dot's angle, distance, and size
+            using jsQuestPlus staircases to target 70% detection on change trials.
+          </p>
+        </div>
+        <a href="experiments/jnd-go-nogo.html">Start experiment</a>
+      </li>
+      <li class="experiment-card">
+        <div>
           <h2>Attentional Blink (Digits)</h2>
           <p>
             Observe a rapid stream of letters and digits, then report the two target numbers.
