Bundle jsPsych assets and update experiment links

--- a/experiments/attentional-blink.html
+++ b/experiments/attentional-blink.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="https://unpkg.com/jspsych@7.3.3/css/jspsych.css" />
+  <link rel="stylesheet" href="../jspsych/css/jspsych.css" />
   <style>
     :root {
       color-scheme: light dark;
@@ -116,13 +116,13 @@
 <body>
   <div id="jspsych-target"></div>
 
-  <script src="https://unpkg.com/jspsych@7.3.3/dist/index.browser.min.js"></script>
-  <script src="https://unpkg.com/@jspsych/plugin-html-keyboard-response@2.1.0/dist/index.browser.min.js"></script>
-  <script src="https://unpkg.com/@jspsych/plugin-html-button-response@2.1.0/dist/index.browser.min.js"></script>
-  <script src="https://unpkg.com/@jspsych/plugin-survey-html-form@2.1.0/dist/index.browser.min.js"></script>
+  <script src="../jspsych/dist/jspsych.js"></script>
+  <script src="../jspsych/plugins/html-keyboard-response.js"></script>
+  <script src="../jspsych/plugins/html-button-response.js"></script>
+  <script src="../jspsych/plugins/survey-html-form.js"></script>
 
   <script>
-    const jsPsych = jsPsychModule.initJsPsych({
+    const jsPsych = initJsPsych({
       display_element: 'jspsych-target'
     });
 
