Fix ISI timing in JND Go/No-Go experiment

--- a/experiments/jnd-go-nogo.html
+++ b/experiments/jnd-go-nogo.html
@@ -398,7 +398,7 @@
         type: jsPsychHtmlKeyboardResponse,
         stimulus: () => stageHTML(),
         choices: 'NO_KEYS',
-        trial_duration: trialState.isi,
+        trial_duration: () => trialState.isi,
         data: { stage: 'isi' }
       };
 
