Add auditory JND experiment

--- a/index.html
+++ b/index.html
@@ -179,6 +179,16 @@
         </div>
         <a href="experiments/attentional-blink.html">Start experiment</a>
       </li>
+      <li class="experiment-card">
+        <div>
+          <h2>Auditory JND (Tone Pair)</h2>
+          <p>
+            Listen to two brief sinewave tones separated by silence and release as soon as you detect that the second
+            tone differs in amplitude, duration, or both. Timing is pre-rendered to ensure precise playback.
+          </p>
+        </div>
+        <a href="experiments/jnd-auditory.html">Start experiment</a>
+      </li>
     </ul>
 
     <footer>
