--- a/experiments/jnd-go-nogo.html
+++ b/experiments/jnd-go-nogo.html
@@ -332,6 +332,7 @@
   <script src="https://unpkg.com/jsquest-plus@2.1.0/dist/jsQuestPlus.js"></script>
   <!-- Context-aware QUEST+ -->
   <script src="adaptiveQuest.js"></script>
+  <script type="module" src="noGoController.js"></script>
   <script> initAdaptiveQuest(); </script>
 
   <script>
@@ -348,7 +349,6 @@
     const holdButton = document.getElementById('hold-button');
     const stopExperimentButton = document.getElementById('stop-experiment');
 
-    const GO_PROBABILITY = 1 / 3;
     const TOTAL_TRIALS = 1000;
     const FIRST_STIM_DURATION = 33;
     const SECOND_STIM_DURATION = 33;
@@ -747,9 +747,13 @@
           const total = Math.max(progressTotal, 1);
           jsPsych.setProgressBar((progressBase + index) / total);
           const holdStartedAt = typeof lastHoldStartTime === 'number' ? lastHoldStartTime : holdState.holdStart ?? null;
+          const ctrl = typeof NoGoCtrl !== 'undefined' ? NoGoCtrl : null;
+          const isNoGo = ctrl && typeof ctrl.decideNoGo === 'function' ? ctrl.decideNoGo() : false;
+
           trialState = {
             index: offset + index + 1,
-            isGo: Math.random() < GO_PROBABILITY,
+            isNoGo,
+            isGo: !isNoGo,
             isi: jsPsych.randomization.randomInt(50, 1000),
             changeType: 'none',
             questStimValue: null,
@@ -976,9 +980,15 @@
               : null;
           const source = responded ? result.response_source || holdState.primarySource || 'none' : 'none';
 
+          const ctrl = typeof NoGoCtrl !== 'undefined' ? NoGoCtrl : null;
+          if (ctrl && typeof ctrl.onTrialEnd === 'function') {
+            ctrl.onTrialEnd({ isNoGo: trialState.isNoGo === true, responded });
+          }
+
           data.rt = rt;
           data.response_source = source;
           data.is_go = trialState.isGo;
+          data.is_no_go = trialState.isNoGo;
           data.change_type = trialState.changeType;
           data.delta_theta = trialState.deltaTheta;
           data.delta_radius = trialState.deltaRadius;
