Add perceptual localization task and shared calibration

--- a/index.html
+++ b/index.html
@@ -181,6 +181,16 @@
       </li>
       <li class="experiment-card">
         <div>
+          <h2>Perceptual Localization (Immediate)</h2>
+          <p>
+            Tap where a brief flash appeared while keeping your eyes on the fixation point. Targets are sampled uniformly
+            within a 5° disk (with a 0.3° central veto) and will reappear every 1.5 s until you respond.
+          </p>
+        </div>
+        <a href="experiments/perceptual-localization.html">Start experiment</a>
+      </li>
+      <li class="experiment-card">
+        <div>
           <h2>Auditory JND (Tone Pair)</h2>
           <p>
             Listen to two brief sinewave tones separated by silence and release as soon as you detect that the second
