Update calibration headings for display

--- a/experiments/perceptual-localization.html
+++ b/experiments/perceptual-localization.html
@@ -324,7 +324,7 @@
         </section>
 
         <section id="calibration-section" class="calibration-section">
-          <h2>Display calibration</h2>
+          <h2>Calibrate your display</h2>
           <p class="small-print">
             Resize the shape to match a real object, then enter your viewing distance. This calibration will be used
             to convert between degrees and pixels.
