--- a/experiments/jnd-go-nogo.html
+++ b/experiments/jnd-go-nogo.html
@@ -227,7 +227,7 @@
       <p id="session-status" class="session-status" data-state="info">No previous session loaded.</p>
 
       <div id="calibration-section" class="calibration-section">
-        <h2>Calibrate your viewing geometry</h2>
+        <h2>Calibrate your display</h2>
         <p>
           Pick a familiar object, hold it gently against the screen, and resize the on-screen shape so it matches.
           This lets us convert every pixel on your display into degrees of visual angle.
